--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.12",
     "react-redux": "^7.1.1",
+    "react-required-if": "^1.0.3",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
