--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-redux": "^7.1.1",
     "react-required-if": "^1.0.3",
     "react-router-dom": "^5.0.1",
+    "reactjs-pdf-reader": "^1.0.9",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
