--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.51",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@svgr/webpack": "2.4.1",
     "axios": "^0.18.0",
@@ -62,6 +62,7 @@
     "prettier": "^1.16.3",
     "react": "^16.8.6",
     "react-app-polyfill": "^0.2.0",
+    "react-bootstrap-typeahead": "^5.0.0-rc.3",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.12",
