cambio a localhost para pruebas, subida de grafico.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "chart.js": "^2.9.3",
     "clsx": "^1.1.0",
     "connected-react-router": "^6.2.2",
     "cross-env": "^5.2.0",
@@ -63,6 +64,7 @@
     "react": "^16.8.6",
     "react-app-polyfill": "^0.2.0",
     "react-bootstrap-typeahead": "^5.0.0-rc.3",
+    "react-chartjs-2": "^2.9.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.12",
