--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react-hooks": "^2.0.1",
     "file-loader": "2.0.0",
     "file-saver": "^2.0.2",
+    "firebase": "^8.4.2",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
     "history": "^4.7.2",
@@ -67,6 +68,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.8.6",
+    "react-firebase-hooks": "^3.0.4",
     "react-hot-loader": "^4.12.12",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.1.1",
