--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier": "^1.16.3",
     "react": "^16.8.6",
     "react-app-polyfill": "^0.2.0",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap-typeahead": "^5.0.0-rc.3",
     "react-chartjs-2": "^2.9.0",
     "react-dev-utils": "^7.0.1",
